# Manasa-mlops

./: .gitignore  mlruns.db
module_1_introduction/: duration-prediction.ipynb  homework-1-manasa.md
module_1_introduction/output/: dv.pkl  test.pkl  val.pkl
module_2_experiment-tracking/: 2-homework.md  experiment_tracking.ipynb
module_2_experiment-tracking/homework/: homework-2-experiment-tracking.md  hpo.py  preprocess_data.py  register_model.py  train.py
module_3_orchestration/mage-mlops/: Dockerfile  docker-compose.yml
module_3_orchestration/mage-mlops/mlops/: metadata.yaml
module_3_orchestration/mage-mlops/mlops/homework_03/: homework.md
module_3_orchestration/mage-mlops/mlops/unit_1_data_preparation/: global_data_products.yaml
module_3_orchestration/mage-mlops/mlops/unit_2_training/: global_data_products.yaml
module_3_orchestration/mage-mlops/scripts/: start.sh
module_3_orchestration/mlops/mlops/: metadata.yaml
module_4_deploy/: Dockerfile  pyproject.toml
module_4_deploy/homework/: homework.py
module_4_deployment/: predict.py  pyproject.toml
module_4_deployment/homework/: homework.ipynb  homework.md
module_5_monitoring/: homework.md  monitoring.py
module_5_monitoring/data/: reference.parquet
module_5_monitoring/workspace/01962504-a39b-74f5-b1a8-e8236d20b8c7/: metadata.json
module_6_best_practices/homework/: batch.py  homework.md
module_6_best_practices/homework/integration-tests/: test_integration.py
module_6_best_practices/homework/tests/: __init__.py  test_batch.py
output/: train.pkl
(+17 files in other folders)
